# mikesh

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.py  pyproject.toml  test.py
rust/: Cargo.toml
rust/src/: _adjugate.rs  _determinant.rs  lib.rs
src/: lib.rs
src/aether/: aether.rs
src/endf/: endf.rs
src/mikesh/: __init__.py  matrix.py  spectrum.py
src/mikesh/matrix_methods/: _adjugate.py  _constructor.py  _determinant.py  _equal.py  _inverse.py  _multiply.py  _rmultiply.py
src/mikesh/spectrum_methods/: _constructor.py  _equal.py  _export.py  _groups.py  _integral.py  _integrity.py  _regroup.py
tests/: test_class.py
tests/importing/: importing.py
tests/matrix/: test_01_matx_01_creation.py  test_01_matx_02_equal.py  test_01_matx_03_multiply.py  test_01_matx_04_determinant.py  test_01_matx_05_adjugate.py  test_01_matx_06_inverse.py
tests/spectrum/: spectrum_1  spectrum_2  test_02_nspe_01_creation.py  test_02_nspe_02_groups.py  test_02_nspe_04_regroup.py  test_02_nspe_05_plots.py  test_02_nspe_06_equal.py  test_02_nspe_07_exports.py  test_integrals.py
