[package]
name    = "mikesh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name       = "mikesh"
crate-type = ["cdylib"]

[dependencies]
hyper = "0.14.10"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
