[package]
name    = "mikesh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name       = "mikesh"
crate-type = ["cdylib"]

[dependencies]
reqwest = {version = "0.11.4", features = ["blocking"]}

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
